--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.15.0",
+    "eslint": "^9.15.0",
+    "globals": "^15.12.0"
   }
 }
